libunifex: Update to r692 and enable aarch64 builds

--- a/mingw-w64-libunifex/PKGBUILD
+++ b/mingw-w64-libunifex/PKGBUILD
@@ -3,18 +3,18 @@
 _realname=libunifex
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=r564.d7d191e
-pkgrel=2
+pkgver=r692.fdd2c23
+pkgrel=1
 pkgdesc='A prototype implementation of the C++ sender/receiver async programming model (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:Apache-2.0')
 url="https://github.com/facebookexperimental/libunifex"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              'git')
-_commit='d7d191e'
+_commit='fdd2c23'
 source=("${_realname}::git+https://github.com/facebookexperimental/${_realname}.git#commit=${_commit}")
 sha256sums=('SKIP')
 
@@ -33,7 +33,7 @@ build(){
   cd "${srcdir}/build-${MSYSTEM}"
 
   if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]]; then
-      CXX_FLAGS="-fcoroutines-ts -stdlib=libc++"
+      CXX_FLAGS="-stdlib=libc++"
   else
       CXX_FLAGS="-fcoroutines"
   fi
