Add missing header

--- a/mingw-w64-libunifex/PKGBUILD
+++ b/mingw-w64-libunifex/PKGBUILD
@@ -15,17 +15,30 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              'git')
 _commit='fdd2c23'
-source=("${_realname}::git+https://github.com/facebookexperimental/${_realname}.git#commit=${_commit}")
-sha256sums=('SKIP')
+source=("${_realname}::git+https://github.com/facebookexperimental/${_realname}.git#commit=${_commit}"
+        "001-missing-memset.patch")
+sha256sums=('SKIP'
+            'f9375ed32056557795834b57f7d65929ecdcaced9cefaf763eca7bb8fe89e53c')
 
 pkgver() {
   cd "${srcdir}/${_realname}"
   printf "r%s.%s" "$(git rev-list --count "${_commit}")" "$(git rev-parse --short "${_commit}")"
 }
 
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -Nbp1 --binary -i "${srcdir}/${_patch}"
+  done
+}
+
 prepare() {
   cd "${srcdir}/${_realname}"
   sed -i "s/-Werror//g" cmake/unifex_env.cmake
+
+  apply_patch_with_msg \
+    001-missing-memset.patch
 }
 
 build(){
