--- a/mingw-w64-libserdes/PKGBUILD
+++ b/mingw-w64-libserdes/PKGBUILD
@@ -12,10 +12,9 @@ url="https://github.com/confluentinc/libserdes"
 license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-librdkafka"
-             "${MINGW_PACKAGE_PREFIX}-autotools")
-depends=("${MINGW_PACKAGE_PREFIX}-boost"
-         "${MINGW_PACKAGE_PREFIX}-curl"
-         "${MINGW_PACKAGE_PREFIX}-fmt"
+             "${MINGW_PACKAGE_PREFIX}-autotools"
+             "${MINGW_PACKAGE_PREFIX}-boost")
+depends=("${MINGW_PACKAGE_PREFIX}-curl"
          "${MINGW_PACKAGE_PREFIX}-jansson"
          "${MINGW_PACKAGE_PREFIX}-libavro")
 optdepends=("${MINGW_PACKAGE_PREFIX}-librdkafka")
