python-propcache: update to 0.3.0

--- a/mingw-w64-python-propcache/PKGBUILD
+++ b/mingw-w64-python-propcache/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=propcache
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.2.1
+pkgver=0.3.0
 pkgrel=1
 pkgdesc='Fast property caching (mingw-w64)'
 arch=('any')
@@ -23,16 +23,11 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-expandvars"
   "${MINGW_PACKAGE_PREFIX}-cython"
   "${MINGW_PACKAGE_PREFIX}-cc")
-source=("https://github.com/aio-libs/propcache/archive/v${pkgver}/propcache-${pkgver}.tar.gz")
-sha256sums=('2a926d6965aacdc0a38011ee7d12b927c3f4ca33c98046629f4f87674bf9c4f2')
-
-prepare() {
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('a8fd93de4e1d278046345f49e2238cdb298589325849b2645d4a94c53faeffc5')
 
 build() {
-  cd "python-build-${MSYSTEM}"
-
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   python -m build --wheel --skip-dependency-check --no-isolation
 }
 
