--- a/mingw-w64-leveldb/PKGBUILD
+++ b/mingw-w64-leveldb/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.23
 pkgrel=3
 pkgdesc="A fast and lightweight key/value database library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/google/leveldb"
 license=('BSD')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
