--- a/mingw-w64-freerdp/PKGBUILD
+++ b/mingw-w64-freerdp/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=freerdp
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.8.0
+pkgver=3.12.0
 pkgrel=1
 pkgdesc="Free implementation of the Remote Desktop Protocol (RDP) (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.freerdp.com/"
 msys2_repository_url="https://github.com/FreeRDP/FreeRDP"
 msys2_references=(
@@ -21,7 +21,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-cairo"
          "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
          "${MINGW_PACKAGE_PREFIX}-libusb"
          "${MINGW_PACKAGE_PREFIX}-openssl"
-         "${MINGW_PACKAGE_PREFIX}-SDL2_ttf"
+         "${MINGW_PACKAGE_PREFIX}-sdl3-ttf"
          "${MINGW_PACKAGE_PREFIX}-uriparser")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
@@ -29,8 +29,31 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-icu"
              "${MINGW_PACKAGE_PREFIX}-iconv"
              "${MINGW_PACKAGE_PREFIX}-docbook-xsl")
-source=("https://github.com/FreeRDP/FreeRDP/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('e313934a77a0bcca3af803455dd9ea1aa2f657c598e3397325aa48e6effd450d')
+source=("https://github.com/FreeRDP/FreeRDP/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
+        "001-nameless-union.patch"
+        "002-fix-missing-symbol.patch"
+        "003-dll-install-location.patch")
+sha256sums=('837d91574b2f095fea2b7cf5951d9256ec06dc760034bfbf97cc1e85a5610878'
+            '445e9ce79a7783345082d0f6276c3baea50c2aeed8047c18846a37c8bef995e6'
+            '86adfa3e07eef9e2833559804ebcb97080140e9050df7ac5af8580310d30112a'
+            'c26ebfd8773d3a62199bb0a159b3ded9d16675356dc7f74e1a561b8e70868552')
+
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying ${_patch}"
+    patch -Nbp1 --binary -i "${srcdir}/${_patch}"
+  done
+}
+
+prepare() {
+  cd ${_realname}-${pkgver}
+
+  apply_patch_with_msg \
+    001-nameless-union.patch \
+    002-fix-missing-symbol.patch \
+    003-dll-install-location.patch
+}
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -72,10 +95,14 @@ build() {
     -DWITH_ZLIB=ON \
     -DWITH_WEBVIEW=OFF \
     -DWITH_WINPR_TOOLS=ON \
+    -DWITH_SHADOW=OFF \
+    -DWITH_CLIENT_SDL2=OFF \
+    -DWITH_MBEDTLS=OFF \
+    -DWITH_CLIENT_INTERFACE=ON \
+    -DWITH_WIN_CONSOLE=ON \
     -DCHANNEL_URBDRC_CLIENT=ON \
     -DUSE_UNWIND=OFF \
     -DBUILD_TESTING=OFF \
-    -DDOCBOOKXSL_DIR=${MINGW_PREFIX}/share/xml/docbook/xsl-stylesheets-nons-1.79.2 \
     "../FreeRDP-${pkgver}"
 
   ${MINGW_PREFIX}/bin/cmake.exe --build ./
