--- a/mingw-w64-kicad/PKGBUILD
+++ b/mingw-w64-kicad/PKGBUILD
@@ -9,11 +9,11 @@ _wx_basever=3.2
 _realname=kicad
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=8.0.6
-pkgrel=4
+pkgver=9.0.0
+pkgrel=1
 pkgdesc="Software for the creation of electronic schematic diagrams and printed circuit board artwork (mingw-w64)"
 arch=(any)
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64') #mingw64 is not available in nng
 url="https://www.kicad.org/"
 msys2_repository_url="https://gitlab.com/kicad/code/kicad"
 msys2_references=(
@@ -32,6 +32,8 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-freeglut"
   "${MINGW_PACKAGE_PREFIX}-glew"
   "${MINGW_PACKAGE_PREFIX}-glm"
+  "${MINGW_PACKAGE_PREFIX}-nng"
+  "${MINGW_PACKAGE_PREFIX}-protobuf"
   "${MINGW_PACKAGE_PREFIX}-kicad-footprints"
   "${MINGW_PACKAGE_PREFIX}-kicad-symbols"
   "${MINGW_PACKAGE_PREFIX}-libgit2"
@@ -64,22 +66,24 @@ for _doclang in ${_doc[@]}; do
 done
 source=(
   "https://gitlab.com/kicad/code/kicad/-/archive/${pkgver}/kicad-${pkgver}.tar.bz2"
-  '001-fix-build-with-fmt-11.patch'
   '002-ki-6.0-cmake-fixes-for-MINGW-CLANG.patch'
   '003-ki-6.0-code-fixes-for-GNUC-CLANG.patch'
   '004-fix-loading-ngspice-dll.patch'
   '005-clang-fmt-workaround.patch'
   '006-ki-6.0-rewrite-kiwin32_rc_for_clang.patch'
   '007-llvm-libcxx-19.patch'
+  '008-fix-version-header-dependency.patch'
+  '009-clang-needs-explicit-json-implementations.patch'
 )
-sha256sums=('f808ecb7ff588d9f6c70ec5938072c28ededaaed37fb7b4fe5eaaea57253f06c'
-            '3c51482f1e452e37e75c06a65996aa5d631a93e82fbef7dd8274ae8ebbd53601'
+sha256sums=('628b5fbdf6a4bab5ec5f5fe3e1a314229deb389dc4db87d6637f04899df3f067'
             '2924a86849c02aecd21cded0bd2069353fca33c3364f9b41f9bfdd80e19085cf'
             'd8d5f4bdd0aa6d8a907710c523f6f95840636cb2ef69e5275c6ed4966f134353'
             'f35a96c2393c21c266dbcd42616df64f9ee13b2423478bf6de029a3ad4e0ee8a'
             'bc7ad66d81d56dcfc237dfffe31fff58addff98622f65f64c45df11f70088c37'
             '3155b9515ec7c094221441ce337c566c346bf76bb7aa42e86660cfdfb599e307'
-            '5531acad48988772e4453f42ac749f4001170e4be892d3f224b37e0e606ab5ab')
+            '5531acad48988772e4453f42ac749f4001170e4be892d3f224b37e0e606ab5ab'
+            '2ce8ff7710c64616bdc160cfe7e4079778520c21d2500840dbf74d6f79276727'
+            '3b0249e26dd1fb8f6c9626c93f4ab634f65a8f258fa527566a715cb4a4e49403')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -94,13 +98,14 @@ prepare() {
   cd ${_realname}-${pkgver}
 
   apply_patch_with_msg \
-    001-fix-build-with-fmt-11.patch \
     002-ki-6.0-cmake-fixes-for-MINGW-CLANG.patch \
     003-ki-6.0-code-fixes-for-GNUC-CLANG.patch \
     004-fix-loading-ngspice-dll.patch \
     005-clang-fmt-workaround.patch \
     006-ki-6.0-rewrite-kiwin32_rc_for_clang.patch \
-    007-llvm-libcxx-19.patch
+    007-llvm-libcxx-19.patch \
+    008-fix-version-header-dependency.patch \
+    009-clang-needs-explicit-json-implementations.patch
 }
 
 build() {
