kicad-[doc,library]: Update to 9.0.0

--- a/mingw-w64-kicad-library/PKGBUILD
+++ b/mingw-w64-kicad-library/PKGBUILD
@@ -7,11 +7,11 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-footprints"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-templates"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-packages3D"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-meta")
-pkgver=8.0.5
+pkgver=9.0.0
 pkgrel=1
 pkgdesc="Support libraries for KiCad (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://www.kicad.org/'
 msys2_repository_url="https://gitlab.com/kicad/libraries"
 msys2_references=(
@@ -26,10 +26,10 @@ source=("https://gitlab.com/kicad/libraries/kicad-footprints/-/archive/${pkgver}
         "https://gitlab.com/kicad/libraries/kicad-symbols/-/archive/${pkgver}/kicad-symbols-${pkgver}.tar.bz2"
         "https://gitlab.com/kicad/libraries/kicad-templates/-/archive/${pkgver}/kicad-templates-${pkgver}.tar.bz2"
         "https://gitlab.com/kicad/libraries/kicad-packages3D/-/archive/${pkgver}/kicad-packages3D-${pkgver}.tar.bz2")
-sha256sums=('00cc89a980ce6810dce20561376ad665d995dd3de92d398722fad4afbe522f5e'
-            'f79a8b8022d9338c308126500058f9823714160da427a6feca1dd6874631f4fb'
-            '45c30e8544755aaa55bdf462d01f919463438a7f523d2d9a5860da7a3bcf0846'
-            '4745c4b48c67845184a8a2e20cad3c548c38c80f82e8a44b180c764a524e147f')
+sha256sums=('2c55de89d1558623d9c370bda3c11e3b01522c591ac9cfffc4e80ed2cae75392'
+            '13dc2ec96f2827754c013d99cb8cfafdf60b4dbdb984234cfbee9331bb23f46f'
+            'cb670d3450aced975dad7461d7f9356415e7b3b816ebdf75c06af51504ece256'
+            'd2bc1a757517d3467dff5bb39535480b46db988b3caf36e8b8a313f9bcb627df')
 
 build() {
   declare -a _extra_config
