kicad-[doc,library]: Update to 9.0.0

--- a/mingw-w64-kicad-doc/PKGBUILD
+++ b/mingw-w64-kicad-doc/PKGBUILD
@@ -15,8 +15,10 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-ca"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-pl"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-ru"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-zh")
-_job_id='7765204080' # this is want is needed to change for new version
-pkgver=8.0.5
+
+# https://gitlab.com/kicad/services/kicad-doc/-/jobs/9178132758/artifacts/browse/archive/
+_job_id='9178132758' # this is needed to change for new version
+pkgver=9.0.0
 pkgrel=1
 pkgdesc="Documentation for KiCad (mingw-w64)"
 arch=(any)
@@ -34,14 +36,8 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-kicad-meta"
 # https://kicad-downloads.s3.cern.ch/docs/kicad-doc-8.0.0-rc3.tar.gz
 # Use the more current build artifact from the release tag instead:
 # https://gitlab.com/kicad/services/kicad-doc/-/artifacts
-source=("${_realname}-${pkgver}.zip::https://gitlab.com/kicad/services/kicad-doc/-/jobs/${_job_id}/artifacts/download")
-sha256sums=('bd9625c2e336f561373b2f604da45e56cb51e84adfdab6df9c1c8e2ee1382ab9')
-
-prepare() {
-  cd "${srcdir}"
-
-  tar -xzf "${srcdir}"/archive/kicad-doc-unknown.tar.gz -C "${srcdir}"
-}
+source=("${_realname}-${pkgver}.tar.gz::https://gitlab.com/kicad/services/kicad-doc/-/jobs/${_job_id}/artifacts/raw/archive/kicad-doc-unknown.tar.gz")
+sha256sums=('fec4e4ae87ad174666effb10b0c2b76ff684fef5f38ac6bc09aee62c79c9105b')
 
 build_lang() {
   cd "${srcdir}/kicad-doc-unknown/share/doc/kicad/help"
