mingw-w64-gcc: Allow the gcc driver to expand wildcards

--- a/mingw-w64-gcc/PKGBUILD
+++ b/mingw-w64-gcc/PKGBUILD
@@ -237,6 +237,7 @@ build() {
     --enable-checking=release \
     --with-arch=${_arch} \
     --with-tune=generic \
+    --enable-mingw-wildcard \
     --enable-languages=${_languages} \
     --enable-shared \
     --enable-static \
