turbo: update to 1.85.0

--- a/mingw-w64-turbo/PKGBUILD
+++ b/mingw-w64-turbo/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=turbo
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.4.2
+pkgver=2.4.4
 pkgrel=1
 pkgdesc="Incremental bundler and build system optimized for JavaScript and TypeScript (mingw-w64)"
 arch=('any')
@@ -25,14 +25,17 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
 options=('!strip')
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.10+zstd.1.5.6/download"
-        "zstd-sys-remove-statik.patch")
-sha256sums=('1f4dc2809665b4f7bcc9e0e23b6d6bc78abc70aec41008a40e1eec38cb190a15'
+        "zstd-sys-remove-statik.patch"
+        "rust-1.85.0-fixes.patch")
+sha256sums=('9a3ff8799369b40f181cac900309fcbddd71d33ca72dbe5e2268187a22816114'
             'c253a4914af5bafc8fa8c86ee400827e83cf6ec01195ec1f1ed8441bf00d65aa'
-            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
+            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b'
+            'a9fbfe92c38fd7cc76d8f87d7194f158fd4c9eed774b95f203158abeebcccec6')
 
 prepare() {
   cd turborepo
 
+  patch -Np1 -i ../rust-1.85.0-fixes.patch
   patch -d ../zstd-sys-2.0.10+zstd.1.5.6 -i ../zstd-sys-remove-statik.patch
   cat >> Cargo.toml <<END
 
