mingw-w64-gcc: Allow the gcc driver to expand wildcards (#23517)
* mingw-w64-gcc: Allow the gcc driver to expand wildcards

* bump pkgrel

---------

Co-authored-by: Christoph Reiter <reiter.christoph@gmail.com>

--- a/mingw-w64-gcc/PKGBUILD
+++ b/mingw-w64-gcc/PKGBUILD
@@ -48,7 +48,7 @@ else
   _sourcedir=${_realname}-${_version}-${_snapshot}
   _url=https://gcc.gnu.org/pub/gcc/snapshots/${_version}-${_snapshot}
 fi
-pkgrel=2
+pkgrel=3
 pkgdesc="GCC for the MinGW-w64"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64')
@@ -237,6 +237,7 @@ build() {
     --enable-checking=release \
     --with-arch=${_arch} \
     --with-tune=generic \
+    --enable-mingw-wildcard \
     --enable-languages=${_languages} \
     --enable-shared \
     --enable-static \
