--- a/mingw-w64-winstorecompat-git/PKGBUILD
+++ b/mingw-w64-winstorecompat-git/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=winstorecompat
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
-pkgver=12.0.0.r509.g079e6092b
+pkgver=12.0.0.r535.g343bce7b0
 pkgrel=1
-_commit='079e6092b3c49a791e2d36282781827c75d12bba'
+_commit='343bce7b0224bbc576ba70fd5dc8e156a5ac45a3'
 pkgdesc="MinGW-w64 winRT compat library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,7 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "git")
 options=('!buildflags' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('c79f950762101d293e9a6c063e69dd7b9ec36f0f28966b7643c957a227d3b55b')
+sha256sums=('e714eb92bc115f06b4dfcd43cad28cc964a2f92b76179d7fe0cc54d1c511a5b8')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
