gettext: update to 0.24

--- a/mingw-w64-gettext/PKGBUILD
+++ b/mingw-w64-gettext/PKGBUILD
@@ -6,7 +6,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-runtime"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-libtextstyle"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-tools")
-pkgver=0.23.1
+pkgver=0.24
 pkgrel=1
 pkgdesc="GNU internationalization library (mingw-w64)"
 arch=('any')
@@ -29,7 +29,7 @@ source=(https://ftp.gnu.org/pub/gnu/${_realname}/${_realname}-${pkgver}.tar.lz{,
         0021-replace-fsync.patch
         0022-libasprintf.patch
         0024-disable-gnu-format.patch)
-sha256sums=('093de8a7ffb4670981fac271301bff56433c2fa1e71fb3b8b621891a21e8fd49'
+sha256sums=('0eb4153c3fc066d050242541156e8fd1ad74e80e4c08c2cc9f426e68e3d98015'
             'SKIP'
             'e3a933c96a711bbb5ba6e584dd35f897dc7043da90a5682c05b137a0ad93bc7a'
             'cbc2f533012d646521afa20f8b256917fce040741ff42cf53fb6dd7123a6670a'
@@ -38,7 +38,8 @@ sha256sums=('093de8a7ffb4670981fac271301bff56433c2fa1e71fb3b8b621891a21e8fd49'
             'c354f6a7021069c99b90f1c6d6f6a4ccf40a01e9f6742b866df2b5a7286cb868'
             'ce7ccf6dd3a492cab322253cd67310899b546eccc25821c25cbc047a1a984633')
 validpgpkeys=('462225C3B46F34879FC8496CD605848ED7E69871'  # Daiki Ueno
-              '9001B85AF9E1B83DF1BDA942F5BE8B267C6A406D') # Bruno Haible
+              '9001B85AF9E1B83DF1BDA942F5BE8B267C6A406D'  # Bruno Haible
+              'E0FFBD975397F77A32AB76ECB6301D9E1BBEAC08') # Bruno Haible (FSF) <bruno@clisp.org>
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
