sdl3-image: fix find libjxl

--- a/mingw-w64-sdl3-image/PKGBUILD
+++ b/mingw-w64-sdl3-image/PKGBUILD
@@ -4,7 +4,7 @@ _realname=sdl3-image
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
 pkgver=3.2.0
-pkgrel=2
+pkgrel=3
 pkgdesc="A simple library to load images of various formats as SDL surfaces (Version 3) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -20,10 +20,18 @@ depends=("${MINGW_PACKAGE_PREFIX}-sdl3"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${url}/releases/download/release-${pkgver}/SDL3_image-${pkgver}.tar.gz"{,.sig})
+source=("${url}/releases/download/release-${pkgver}/SDL3_image-${pkgver}.tar.gz"{,.sig}
+        '0001-sdl3-image-3.2.0-find-jxl-fix.patch')
 sha256sums=('1690baea71b2b4ded9895126cddbc03a1000b027d099a4fb4669c4d23d73b19f'
-            'SKIP')
+            'SKIP'
+            'a08db738bf8a50b87f43c4763a614a6e6b0c3879c3be1fd0ac98d74b6aae56c5')
 validpgpkeys=('1528635D8053A57F77D1E08630A59377A7763BE6') # Sam Lantinga <slouken@libsdl.org>
+
+prepare() {
+  cd "SDL3_image-${pkgver}"
+
+  patch -p1 -i "${srcdir}"/0001-sdl3-image-3.2.0-find-jxl-fix.patch
+}
 
 build() {
   declare -a extra_config
