--- a/mingw-w64-sdl3-image/PKGBUILD
+++ b/mingw-w64-sdl3-image/PKGBUILD
@@ -21,16 +21,19 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cc")
 source=("${url}/releases/download/release-${pkgver}/SDL3_image-${pkgver}.tar.gz"{,.sig}
-        '0001-sdl3-image-3.2.0-find-jxl-fix.patch')
+        '0001-sdl3-image-3.2.0-find-jxl-fix.patch'
+        '0002-sdl3-image-3.2.0-find-tiff-fix.patch')
 sha256sums=('1690baea71b2b4ded9895126cddbc03a1000b027d099a4fb4669c4d23d73b19f'
             'SKIP'
-            'a08db738bf8a50b87f43c4763a614a6e6b0c3879c3be1fd0ac98d74b6aae56c5')
+            'a08db738bf8a50b87f43c4763a614a6e6b0c3879c3be1fd0ac98d74b6aae56c5'
+            'bbabfeee42eaca138f749eba896c0cec5b6185f3a6dda6ecae7c41c8c9245586')
 validpgpkeys=('1528635D8053A57F77D1E08630A59377A7763BE6') # Sam Lantinga <slouken@libsdl.org>
 
 prepare() {
   cd "SDL3_image-${pkgver}"
 
   patch -p1 -i "${srcdir}"/0001-sdl3-image-3.2.0-find-jxl-fix.patch
+  patch -p1 -i "${srcdir}"/0002-sdl3-image-3.2.0-find-tiff-fix.patch
 }
 
 build() {
