kicad: move meta package from kicad-library to kicad to avoid cycles

--- a/mingw-w64-kicad-library/PKGBUILD
+++ b/mingw-w64-kicad-library/PKGBUILD
@@ -5,8 +5,7 @@ pkgbase=mingw-w64-${_realname}-library
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-footprints"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-symbols"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-templates"
-         "${MINGW_PACKAGE_PREFIX}-${_realname}-packages3D"
-         "${MINGW_PACKAGE_PREFIX}-${_realname}-meta")
+         "${MINGW_PACKAGE_PREFIX}-${_realname}-packages3D")
 pkgver=9.0.0
 pkgrel=1
 pkgdesc="Support libraries for KiCad (mingw-w64)"
@@ -94,16 +93,6 @@ package_packages3D() {
   cd "${srcdir}/build-packages3D-${MSYSTEM}"
 
   DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
-}
-
-package_meta() {
-  pkgdesc="Meta package for KiCad containing the core application and support libraries (mingw-w64)"
-
-  depends=(${MINGW_PACKAGE_PREFIX}-${_realname}
-           ${MINGW_PACKAGE_PREFIX}-${_realname}-footprints
-           ${MINGW_PACKAGE_PREFIX}-${_realname}-symbols
-           ${MINGW_PACKAGE_PREFIX}-${_realname}-templates
-           ${MINGW_PACKAGE_PREFIX}-${_realname}-packages3D)
 }
 
 # template start; name=mingw-w64-splitpkg-wrappers; version=1.0;
