--- a/mingw-w64-kicad/PKGBUILD
+++ b/mingw-w64-kicad/PKGBUILD
@@ -8,9 +8,10 @@ _wx_basever=3.2
 
 _realname=kicad
 pkgbase=mingw-w64-${_realname}
-pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
+         "${MINGW_PACKAGE_PREFIX}-${_realname}-meta")
 pkgver=9.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Software for the creation of electronic schematic diagrams and printed circuit board artwork (mingw-w64)"
 arch=(any)
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -141,10 +142,35 @@ build() {
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
 }
 
-package() {
+package_kicad() {
   cd "${srcdir}/build-${MSYSTEM}"
   DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install .
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.README" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.README"
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.GPLv3" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.GPLv3"
 }
+
+package_kicad-meta() {
+  pkgdesc="Meta package for KiCad containing the core application and support libraries (mingw-w64)"
+
+  optdepends=()
+  replaces=()
+  conflicts=()
+  provides=()
+  depends=(${MINGW_PACKAGE_PREFIX}-${_realname}
+           ${MINGW_PACKAGE_PREFIX}-${_realname}-footprints
+           ${MINGW_PACKAGE_PREFIX}-${_realname}-symbols
+           ${MINGW_PACKAGE_PREFIX}-${_realname}-templates
+           ${MINGW_PACKAGE_PREFIX}-${_realname}-packages3D)
+}
+
+# template start; name=mingw-w64-splitpkg-wrappers; version=1.0;
+# vim: set ft=bash :
+
+# generate wrappers
+for _name in "${pkgname[@]}"; do
+  _short="package_${_name#${MINGW_PACKAGE_PREFIX}-}"
+  _func="$(declare -f "${_short}")"
+  eval "${_func/#${_short}/package_${_name}}"
+done
+# template end;
