kicad: disable clangarm64

--- a/mingw-w64-kicad/PKGBUILD
+++ b/mingw-w64-kicad/PKGBUILD
@@ -14,7 +14,7 @@ pkgver=9.0.0
 pkgrel=2
 pkgdesc="Software for the creation of electronic schematic diagrams and printed circuit board artwork (mingw-w64)"
 arch=(any)
-mingw_arch=('ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('ucrt64' 'clang64')
 url="https://www.kicad.org/"
 msys2_repository_url="https://gitlab.com/kicad/code/kicad"
 msys2_references=(
