--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.174.8
+pkgver=0.175.5
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -12,6 +12,7 @@ url='https://zed.dev'
 msys2_repository_url='https://github.com/zed-industries/zed'
 msys2_documentation_url='https://zed.dev/docs'
 license=('spdx:AGPL-3.0-or-later AND Apache-2.0 AND GPL-3.0-or-later')
+install=zed-${MSYSTEM}.install
 msys2_references=(
   'anitya: 373275'
   'archlinux: zed'
@@ -44,13 +45,19 @@ source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "aws-lc-clang-build.patch"
         "zed-dont-vendor-cargo-about.patch"
-        "zstd-sys-remove-statik.patch")
-sha256sums=('6a3ce4aa5fa10988a6388afbed054eaa8529f36dc08eb599840fb63db953a512'
+        "zstd-sys-remove-statik.patch"
+        "672a472a23ec260f2766b1e6f2075a9f94384935.patch"
+        "https://github.com/zed-industries/zed/commit/0625006a9e7225d995cf392c51de9f938a999b46.patch"
+        "zed-cli-set-path.patch")
+sha256sums=('cb6b8037a1b269c2b4021fb29ffb5a41ea2961deec795ee2c85cdf543dd5c4f0'
             'f7ef2e96d54e33481b5e4838ee3336a9382b8b7a24767ca47fd39069aa466723'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             '2e3d7ef6fdb3ef8a2ec11207e8120ea34553888116ea8a032cb425a8a6261c39'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
-            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
+            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b'
+            'b2570bc4795afe6e7b7dbbadc8f2d778c1655b7f804393221e7d513db54c8327'
+            'bf7415426859e7a5f58300c273a0630dfc8e6cc6fcecd7a300cc80543e3568ce'
+            '579181a43e01be3dca2a29add532ff0fa0cc5c8700bb929839ef1041fd4af864')
 
 prepare() {
   cd "${_realname}"
@@ -60,6 +67,10 @@ prepare() {
 
   rm rust-toolchain.toml
 
+  # add support for cli on Windows
+  patch -Np1 -i ../672a472a23ec260f2766b1e6f2075a9f94384935.patch
+  patch -Np1 -i ../0625006a9e7225d995cf392c51de9f938a999b46.patch
+  patch -Np1 -i ../zed-cli-set-path.patch
   # use system cargo about to generate license file
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
   # link system deps dynamically
@@ -108,16 +119,17 @@ build() {
   # set path to aws-lc include explicitly: https://github.com/aws/aws-lc-rs/issues/696
   export CFLAGS="$CFLAGS -I$(cygpath -am ${srcdir}/aws-lc-rs/aws-lc-sys/aws-lc/include)"
 
-  cargo build --release --frozen -p zed
+  cargo build --release --frozen -p zed -p cli
 }
 
 check() {
   cd "${_realname}"
 
-  cargo test --release --frozen -p zed
+  cargo test --release --frozen -p zed -p cli
 }
 
 package() {
-  install -Dm755 "${_realname}/target/release/zed" "${pkgdir}${MINGW_PREFIX}/bin/zed"
+  install -Dm755 "${_realname}/target/release/cli" "${pkgdir}${MINGW_PREFIX}/bin/zeditor"
+  install -Dm755 "${_realname}/target/release/zed" "${pkgdir}${MINGW_PREFIX}/lib/zed/zed-editor"
   install -Dm644 "${_realname}/assets/licenses.md" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.md"
 }
