breeze: Add upstream patch for fixing build

--- a/mingw-w64-breeze/PKGBUILD
+++ b/mingw-w64-breeze/PKGBUILD
@@ -37,16 +37,21 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-7zip"
              "${MINGW_PACKAGE_PREFIX}-python"
              "${MINGW_PACKAGE_PREFIX}-qt6-tools")
 groups=("${MINGW_PACKAGE_PREFIX}-plasma")
-source=("https://download.kde.org/stable/plasma/${pkgver}/${_realname}-${pkgver}.tar.xz"{,.sig})
+source=("https://download.kde.org/stable/plasma/${pkgver}/${_realname}-${pkgver}.tar.xz"{,.sig}
+        "https://invent.kde.org/plasma/breeze/-/commit/cd3c4778a881bf66800542213da51806a9a4f3b0.patch")
 noextract=("${_realname}-${pkgver}.tar.xz")
 sha256sums=('065cf397152ae1a3f24e8fc3aa0e15fa40535fc4576d433a8bf3a23a03ea5f9a'
-            'SKIP')
+            'SKIP'
+            '592e53263ca65da28bac94d92824d699f1bc5da02b7b7749f46e97c23ef04785')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D') # Jonathan Esk-Riddell <jr@jriddell.org>
 
 prepare() {
   7z x -bso0 -bsp0 "${_realname}-${pkgver}.tar.xz"
   7z x -bso0 -bsp0 -ttar "${_realname}-${pkgver}.tar"
   python "$(dirname ${BASH_SOURCE[0]})"/../mingw-w64-PKGBUILD-common/replace-symlinks.py "${_realname}-${pkgver}"
+
+  cd "${_realname}-${pkgver}"
+  patch -p1 -i "${srcdir}"/cd3c4778a881bf66800542213da51806a9a4f3b0.patch
 }
 
 build() {
