libuv: backport a fix for Windows 1607.

--- a/mingw-w64-libuv/PKGBUILD
+++ b/mingw-w64-libuv/PKGBUILD
@@ -5,31 +5,37 @@ _realname=libuv
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.50.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Cross-platform asynchronous I/O (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://libuv.org/'
+msys2_repository_url='https://github.com/libuv/libuv/'
+msys2_documentation_url='https://docs.libuv.org/'
 msys2_references=(
   'archlinux: libuv'
   "cpe: cpe:/a:libuv:libuv"
   "cpe: cpe:/a:libuv_project:libuv"
 )
-msys2_documentation_url='https://docs.libuv.org/'
-msys2_repository_url='https://github.com/libuv/libuv/'
-url='https://libuv.org/'
-license=("custom")
+license=("spdx:MIT")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
-source=(https://dist.libuv.org/dist/v${pkgver}/libuv-v${pkgver}.tar.gz{,.sign})
+source=(https://dist.libuv.org/dist/v${pkgver}/libuv-v${pkgver}.tar.gz{,.sign}
+        001-windows-1607.patch::https://github.com/libuv/libuv/commit/82351168.patch)
 sha256sums=('6dc2b39aa7fa66c04e2e015bf47738b84e1c6b86b8987d57dd432d149d77ee25'
-            'SKIP')
+            'SKIP'
+            'df680b00e8e91b41c45aad4a78a8b2c773d531b4d7d9a9ad4442b59a8d0a7378')
 # PGP key IDs are available from https://github.com/libuv/libuv/blob/v1.x/MAINTAINERS.md
 validpgpkeys=(
   'CFBB9CA9A5BEAFD70E2B3C5A79A67C55A3679C8B' # Jameson Nash <vtjnash@gmail.com>
   '612F0EAD9401622379DF4402F28C3C8DA33C03BE' # Santiago Gimeno (sgimeno) <santiago.gimeno@gmail.com>
 )
+
+prepare() {
+  cd ${_realname}-v${pkgver}
+  patch -p1 -i "${srcdir}"/001-windows-1607.patch
+}
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -67,5 +73,6 @@ package() {
   cd "${srcdir}/build-${MSYSTEM}"
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
 
-  install -D -m644 "${srcdir}"/${_realname}-v${pkgver}/LICENSE "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}/LICENSE
+  install -D -m644 "${srcdir}"/${_realname}-v${pkgver}/LICENSE \
+    "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}/LICENSE
 }
