Add missing tool:git

--- a/mingw-w64-webview/PKGBUILD
+++ b/mingw-w64-webview/PKGBUILD
@@ -12,7 +12,7 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/webview/webview"
 license=("MIT")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-curl")
+             "git")
 source=("git+https://github.com/webview/webview.git#commit=$_commit"
 		"webview.pc.in")
 sha256sums=('SKIP'
