New package: webview 1.0(2)

--- a/mingw-w64-webview/PKGBUILD
+++ b/mingw-w64-webview/PKGBUILD
@@ -12,6 +12,7 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/webview/webview"
 license=("MIT")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-clang"
              "${MINGW_PACKAGE_PREFIX}-cmake"
 			       "git")
 source=("git+https://github.com/webview/webview.git#commit=$_commit"
