harfbuzz: update to 10.4.0
Remove 002-fix-build-clang.patch file which was added in upstream.
https://github.com/harfbuzz/harfbuzz/commit/e41dc20c1cec30a168028947fdbd90071f6c2967

--- a/mingw-w64-harfbuzz/PKGBUILD
+++ b/mingw-w64-harfbuzz/PKGBUILD
@@ -8,12 +8,13 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-icu"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-utils"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=10.3.0
+pkgver=10.4.0
 pkgrel=1
 pkgdesc="OpenType text shaping engine"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/harfbuzz/harfbuzz"
+url='https://harfbuzz.github.io/'
+msys2_repository_url='https://github.com/harfbuzz/harfbuzz/'
 msys2_references=(
   "archlinux: harfbuzz"
   "cpe: cpe:/a:harfbuzz_project:harfbuzz"
@@ -37,11 +38,9 @@ depends=("${MINGW_PACKAGE_PREFIX}-freetype"
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-fonttools"
               "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://github.com/harfbuzz/harfbuzz/releases/download/${pkgver}/harfbuzz-${pkgver}.tar.xz"
-        "001-fix-build-with-chafa.patch"
-        "002-fix-build-clang.patch")
-sha256sums=('cd63fc3cbae32622588e46e0670fabf78ee6cff44a6348ca7f037dae9a32f9ea'
-            '26b37a1ca9872973905ecb96bcbe3f054472252320956faa74428206900d360e'
-            '5a29721c0ab2a31c0ac09aef1caf734c1eddb708f455c1c450370e60015c1f15')
+        "001-fix-build-with-chafa.patch")
+sha256sums=('480b6d25014169300669aa1fc39fb356c142d5028324ea52b3a27648b9beaad8'
+            '26b37a1ca9872973905ecb96bcbe3f054472252320956faa74428206900d360e')
 noextract=("harfbuzz-${pkgver}.tar.xz")
 
 prepare() {
@@ -50,7 +49,6 @@ prepare() {
 
   cd ${_realname}-${pkgver}
   patch -p1 -i "${srcdir}"/001-fix-build-with-chafa.patch
-  patch -p1 -i "${srcdir}"/002-fix-build-clang.patch
 }
 
 build() {
