--- a/mingw-w64-python-scikit-build-core/PKGBUILD
+++ b/mingw-w64-python-scikit-build-core/PKGBUILD
@@ -3,15 +3,16 @@
 _realname=scikit-build-core
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.10.7
-pkgrel=3
+pkgver=0.11.0
+pkgrel=1
 pkgdesc="A next generation Python CMake adaptor and Python API for plugins (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://scikit-build-core.readthedocs.io/'
+msys2_repository_url='https://github.com/scikit-build/scikit-build-core'
 msys2_references=(
   'purl: pkg:pypi/scikit-build-core'
 )
-url='https://github.com/scikit-build/scikit-build-core'
 license=('spdx:Apache-2.0')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-cmake"
@@ -38,15 +39,10 @@ checkdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-virtualenv"
 )
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname//-/_}-${pkgver}.tar.gz")
-sha256sums=('04cbb59fe795202a7eeede1849112ee9dcbf3469feebd9b8b36aa541336ac4f8')
-
-prepare() {
-  rm -rf build-${MSYSTEM} | true
-  cp -r "${_realname//-/_}-${pkgver}" "build-${MSYSTEM}"
-}
+sha256sums=('423d8b0885bf1942816c851f8ec7c1efc0a7ecad4f38ff43d5ba869a894b107b')
 
 build() {
-  cd "build-${MSYSTEM}"
+  cp -r "${_realname//-/_}-${pkgver}" "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
