innoextract: Use a different versioning

--- a/mingw-w64-innoextract/PKGBUILD
+++ b/mingw-w64-innoextract/PKGBUILD
@@ -3,12 +3,15 @@
 _realname=innoextract
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.10dev.82.6e9e34e
+_pkgver=1.9
+pkgver=1.9.r82.6e9e34e
 pkgrel=1
+_commit=6e9e34ed0876014fdb46e684103ef8c3605e382e
 pkgdesc="A tool to extract installers created by Inno Setup (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://constexpr.org/innoextract/"
+msys2_repository_url="https://github.com/dscharrer/innoextract"
 license=("spdx:MIT")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
@@ -19,13 +22,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-xz")
-source=("git+https://github.com/dscharrer/innoextract#commit=6e9e34ed0876014fdb46e684103ef8c3605e382e")
+source=("git+https://github.com/dscharrer/innoextract#commit=${_commit}")
 sha256sums=('9e12fe63358bfa1b9ed4810f850d2e628ef7b87acc1ad44fc4d35e1b3a8e2a8e')
 validpgpkeys=("ADE9653703D4ADE0E997758128555A66D7E1DEC9") # Daniel Scharrer <daniel@constexpr.org>
 
 pkgver() {
   cd ${_realname}
-  printf "1.10dev.%s.%s" "$(git rev-list --count 1.9..HEAD)" "$(git rev-parse --short HEAD)"
+  printf "${_pkgver}.r%s.%s" "$(git rev-list --count ${_pkgver}..HEAD)" "$(git rev-parse --short HEAD)"
 }
 
 build() {
