--- a/mingw-w64-webview/PKGBUILD
+++ b/mingw-w64-webview/PKGBUILD
@@ -14,6 +14,7 @@ license=("MIT")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-clang"
              "${MINGW_PACKAGE_PREFIX}-cmake"
+             "doxygen"
 			       "git")
 source=("git+https://github.com/webview/webview.git#commit=$_commit"
 			  "webview.pc.in")
