python-archinfo: update to 9.2.144

--- a/mingw-w64-python-archinfo/PKGBUILD
+++ b/mingw-w64-python-archinfo/PKGBUILD
@@ -1,9 +1,9 @@
+# Maintainer: Biswapriyo Nath <nathbappai@gmail.com>
 
-
-_pyname=archinfo
-pkgbase=mingw-w64-python-${_pyname}
-pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_pyname}")
-pkgver=9.2.138
+_realname=archinfo
+pkgbase=mingw-w64-python-${_realname}
+pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
+pkgver=9.2.144
 pkgrel=1
 pkgdesc="Classes with architecture-specific information useful to other projects (mingw-w64)"
 arch=('any')
@@ -26,12 +26,12 @@ optdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-keystone"
   "${MINGW_PACKAGE_PREFIX}-python-pyvex"
 )
-source=("${url}/archive/v${pkgver}/${_pyname}-${pkgver}.tar.gz")
-sha512sums=('965e230b57bafc5027d0e8389ff90556c08f8983b274561852bd9b6d2ad410d429475f0f9ca53bd744d6a1e758aa21761e2b605c6abbe2ca13e6a74935df16af')
+source=("${url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha512sums=('bef86999b98f645c9a744266b072ae1d3cb7bfaaab68609b98b5670ff81146c4f06748a200552ae9b7dff820c681f8b33b4149d6d14dbb31b8a0d9ff3ceb169a')
 
 
 build() {
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   python -m build --wheel --skip-dependency-check --no-isolation
 }
@@ -49,7 +49,7 @@ package() {
     python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_pyname}/LICENSE"
-  install -Dm644 README.md "${pkgdir}${MINGW_PREFIX}/share/doc/python-${_pyname}/README.md"
+  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
+  install -Dm644 README.md "${pkgdir}${MINGW_PREFIX}/share/doc/python-${_realname}/README.md"
 }
 
