--- a/mingw-w64-python-sphinx/PKGBUILD
+++ b/mingw-w64-python-sphinx/PKGBUILD
@@ -5,8 +5,8 @@ _pyname=Sphinx
 _realname=sphinx
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=8.1.3
-pkgrel=2
+pkgver=8.2.1
+pkgrel=1
 pkgdesc="Python documentation generator (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -25,6 +25,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-python-babel"
          "${MINGW_PACKAGE_PREFIX}-python-packaging"
          "${MINGW_PACKAGE_PREFIX}-python-pygments"
          "${MINGW_PACKAGE_PREFIX}-python-requests"
+         "${MINGW_PACKAGE_PREFIX}-python-roman-numerals-py"
          "${MINGW_PACKAGE_PREFIX}-python-snowballstemmer"
          "${MINGW_PACKAGE_PREFIX}-python-sphinx-alabaster-theme"
          "${MINGW_PACKAGE_PREFIX}-python-sphinxcontrib-applehelp"
@@ -43,7 +44,7 @@ fi
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-defusedxml"
               "${MINGW_PACKAGE_PREFIX}-python-pytest")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('43c1911eecb0d3e161ad78611bc905d1ad0e523e4ddc202a58a821773dc4c927')
+sha256sums=('e4b932951b9c18b039f73b72e4e63afe967d90408700ec222b981ac24647c01e')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
