--- a/mingw-w64-webview/PKGBUILD
+++ b/mingw-w64-webview/PKGBUILD
@@ -11,17 +11,17 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/webview/webview"
 license=("MIT")
-makedepends=("${MINGW_PACKAGE_PREFIX}-ninja"
-                           "${MINGW_PACKAGE_PREFIX}-cmake"
-						   "${MINGW_PACKAGE_PREFIX}-doxygen"
-						   "${MINGW_PACKAGE_PREFIX}-graphviz"
-						   "${MINGW_PACKAGE_PREFIX}-python"
-						   "${MINGW_PACKAGE_PREFIX}-python-lxml"
-						   "${MINGW_PACKAGE_PREFIX}-python-markupsafe"
-						   "${MINGW_PACKAGE_PREFIX}-python-pip"
-						   "${MINGW_PACKAGE_PREFIX}-toolchain"
-						   "base-devel"
-			               "git")
+makedepends=("base-devel"
+			       "git"
+						 "${MINGW_PACKAGE_PREFIX}-toolchain"
+						 "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-cmake"
+						 "${MINGW_PACKAGE_PREFIX}-doxygen"
+						 "${MINGW_PACKAGE_PREFIX}-graphviz"
+						 "${MINGW_PACKAGE_PREFIX}-python"
+						 "${MINGW_PACKAGE_PREFIX}-python-pip"
+						 "${MINGW_PACKAGE_PREFIX}-python-lxml"
+						 "${MINGW_PACKAGE_PREFIX}-python-markupsafe")
 source=("git+https://github.com/webview/webview.git#commit=$_commit"
 			  "webview.pc.in")
 sha256sums=('SKIP'
