Comment some package

--- a/mingw-w64-webview/PKGBUILD
+++ b/mingw-w64-webview/PKGBUILD
@@ -16,12 +16,12 @@ makedepends=("base-devel"
 						 "${MINGW_PACKAGE_PREFIX}-toolchain"
 						 "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cmake"
-						 "${MINGW_PACKAGE_PREFIX}-doxygen"
-						 "${MINGW_PACKAGE_PREFIX}-graphviz"
+						 # "${MINGW_PACKAGE_PREFIX}-doxygen"
+						 # "${MINGW_PACKAGE_PREFIX}-graphviz"
 						 "${MINGW_PACKAGE_PREFIX}-python"
 						 "${MINGW_PACKAGE_PREFIX}-python-pip"
-						 "${MINGW_PACKAGE_PREFIX}-python-lxml"
-						 "${MINGW_PACKAGE_PREFIX}-python-markupsafe")
+						 "${MINGW_PACKAGE_PREFIX}-python-lxml")
+						 # "${MINGW_PACKAGE_PREFIX}-python-markupsafe")
 source=("git+https://github.com/webview/webview.git#commit=$_commit"
 			  "webview.pc.in")
 sha256sums=('SKIP'
