--- a/mingw-w64-sdl3-image/PKGBUILD
+++ b/mingw-w64-sdl3-image/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=sdl3-image
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=3.2.0
-pkgrel=3
+pkgver=3.2.2
+pkgrel=1
 pkgdesc="A simple library to load images of various formats as SDL surfaces (Version 3) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -20,21 +20,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-sdl3"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${url}/releases/download/release-${pkgver}/SDL3_image-${pkgver}.tar.gz"{,.sig}
-        '0001-sdl3-image-3.2.0-find-jxl-fix.patch'
-        '0002-sdl3-image-3.2.0-find-tiff-fix.patch')
-sha256sums=('1690baea71b2b4ded9895126cddbc03a1000b027d099a4fb4669c4d23d73b19f'
-            'SKIP'
-            'a08db738bf8a50b87f43c4763a614a6e6b0c3879c3be1fd0ac98d74b6aae56c5'
-            'bbabfeee42eaca138f749eba896c0cec5b6185f3a6dda6ecae7c41c8c9245586')
+source=("${url}/releases/download/release-${pkgver}/SDL3_image-${pkgver}.tar.gz"{,.sig})
+sha256sums=('fc6669329eb9f5ae644ca6ffa8ce0ee8749ab51c197b51476991df7407d8cf24'
+            'SKIP')
 validpgpkeys=('1528635D8053A57F77D1E08630A59377A7763BE6') # Sam Lantinga <slouken@libsdl.org>
-
-prepare() {
-  cd "SDL3_image-${pkgver}"
-
-  patch -p1 -i "${srcdir}"/0001-sdl3-image-3.2.0-find-jxl-fix.patch
-  patch -p1 -i "${srcdir}"/0002-sdl3-image-3.2.0-find-tiff-fix.patch
-}
 
 build() {
   declare -a extra_config
