fgsl: enable clang64/arm64

--- a/mingw-w64-fgsl/PKGBUILD
+++ b/mingw-w64-fgsl/PKGBUILD
@@ -4,11 +4,11 @@ _realname=fgsl
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.6.0
-pkgrel=1
+pkgrel=2
 gsl_required=2.7
 pkgdesc="Fortran interface to the GNU scientific library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/reinh-bader/fgsl"
 msys2_references=(
   'aur: fgsl-git'
@@ -31,10 +31,19 @@ prepare() {
 build() {
   mkdir -p "${srcdir}"/build-${MSYSTEM} && cd "${srcdir}"/build-${MSYSTEM}
 
+  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
+    export FC=flang
+  fi
+
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX}
 
   make
+}
+
+check() {
+  cd build-${MSYSTEM}
+  make check
 }
 
 package() {
