hdf5: enable Fortran support on clang64/arm64

--- a/mingw-w64-hdf5/PKGBUILD
+++ b/mingw-w64-hdf5/PKGBUILD
@@ -7,7 +7,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _ver=1.14.5
 __patch=
 pkgver=${_ver}${_patch//-/.}
-pkgrel=2
+pkgrel=3
 pkgdesc="General purpose library and file format for storing scientific data (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64' 'mingw32')
@@ -83,16 +83,6 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  # Fails with flang-19:
-  # error: loc("C:/_/B/src/hdf5-1.14.5/fortran/src/H5VLff.F90":456:32):
-  # C:/M/B/src/flang-19.1.4.src/lib/Optimizer/CodeGen/Target.cpp:102:
-  # not yet implemented: passing VALUE BIND(C) derived type for this target
-  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
-    _extra_config+=("-DHDF5_BUILD_FORTRAN=OFF")
-  else
-    _extra_config+=("-DHDF5_BUILD_FORTRAN=ON")
-  fi
-
   CFLAGS+=" -Wno-implicit-function-declaration" \
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
     ${MINGW_PREFIX}/bin/cmake \
@@ -105,6 +95,7 @@ build() {
       "${_extra_config[@]}" \
       -DCMAKE_SKIP_RPATH=ON \
       -DHDF5_BUILD_CPP_LIB=ON \
+      -DHDF5_BUILD_FORTRAN=ON \
       -DHDF5_BUILD_HL_LIB=ON \
       -DHDF5_BUILD_TOOLS=ON \
       -DHDF5_ENABLE_DEPRECATED_SYMBOLS=ON \
