--- a/mingw-w64-fastfetch/PKGBUILD
+++ b/mingw-w64-fastfetch/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer:
+# Maintainer: Biswapriyo Nath <nathbappai@gmail.com>
 
 _realname=fastfetch
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.37.0
+pkgver=2.38.0
 pkgrel=1
 pkgdesc="An actively maintained, feature-rich and performance oriented, neofetch like system information tool (mingw-w64)"
 arch=('any')
@@ -25,7 +25,7 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-vulkan-loader: For Vulkan detection support
             "${MINGW_PACKAGE_PREFIX}-chafa: For chafa image protocol support"
             "${MINGW_PACKAGE_PREFIX}-imagemagick: For sixel image protocol support")
 source=("https://github.com/fastfetch-cli/fastfetch/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('a5739be74686fefc731f7ce1669c645ca98172ae3ed5e7c3d48176df43aea5af')
+sha256sums=('f64635bfc1b42a2e845e3f3f38531a641de8203300112504b9eddc5a61f38f6a')
 
 build() {
   declare -a extra_config
