ffmpeg: update to 7.1.1

--- a/mingw-w64-ffmpeg/PKGBUILD
+++ b/mingw-w64-ffmpeg/PKGBUILD
@@ -6,8 +6,8 @@
 _realname=ffmpeg
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=7.1
-pkgrel=6
+pkgver=7.1.1
+pkgrel=1
 pkgdesc="Complete solution to record, convert and stream audio and video (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -78,15 +78,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 source=(https://ffmpeg.org/releases/${_realname}-${pkgver}.tar.xz{,.asc}
         "pathtools.c"
         "pathtools.h"
-        "0005-Win32-Add-path-relocation-to-frei0r-plugins-search.patch"
-        https://github.com/FFmpeg/FFmpeg/commit/099f88b8641dfc299f3896d17d9addc5b9ae7799.patch)
+        "0005-Win32-Add-path-relocation-to-frei0r-plugins-search.patch")
 validpgpkeys=('FCF986EA15E6E293A5644F10B4322F04D67658D8')
-sha256sums=('40973d44970dbc83ef302b0609f2e74982be2d85916dd2ee7472d30678a7abe6'
+sha256sums=('733984395e0dbbe5c046abda2dc49a5544e7e0e1e2366bba849222ae9e3a03b1'
             'SKIP'
             'ebf471173f5ee9c4416c10a78760cea8afaf1a4a6e653977321e8547ce7bf3c0'
             '1585ef1b61cf53a2ca27049c11d49e0834683dfda798f03547761375df482a90'
-            '8c74e9b5800dbb41c33a60114712726ec768ad6de8f147c2eb30656fd4c899cc'
-            'df6250edd358bfba16d18f0e9a99324c7bba002ed96907062d91975c53dafbb8')
+            '8c74e9b5800dbb41c33a60114712726ec768ad6de8f147c2eb30656fd4c899cc')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -107,8 +105,7 @@ prepare() {
   cp -fHv "${srcdir}"/pathtools.[ch] libavfilter/
 
   apply_patch_with_msg \
-    0005-Win32-Add-path-relocation-to-frei0r-plugins-search.patch \
-    099f88b8641dfc299f3896d17d9addc5b9ae7799.patch
+    0005-Win32-Add-path-relocation-to-frei0r-plugins-search.patch
 }
 
 build() {
