zed: update to 0.176.1

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.175.6
+pkgver=0.176.1
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -32,7 +32,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-rust-bindgen"
              "${MINGW_PACKAGE_PREFIX}-nasm"
              'git')
-optdepends=("${MINGW_PACKAGE_PREFIX}-ollama: provides LLMs for assistance panel"
+optdepends=('git: for a better Git integration'
+            "${MINGW_PACKAGE_PREFIX}-ollama: provides LLMs for assistance panel"
             "${MINGW_PACKAGE_PREFIX}-clang-tools-extra: for a better C/C++ language support"
             "${MINGW_PACKAGE_PREFIX}-rust-analyzer: for a better Rust language support"
             "${MINGW_PACKAGE_PREFIX}-ruff: for 'Ruff' extension")
@@ -45,19 +46,13 @@ source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "aws-lc-clang-build.patch"
         "zed-dont-vendor-cargo-about.patch"
-        "zstd-sys-remove-statik.patch"
-        "672a472a23ec260f2766b1e6f2075a9f94384935.patch"
-        "https://github.com/zed-industries/zed/commit/0625006a9e7225d995cf392c51de9f938a999b46.patch"
-        "zed-cli-set-path.patch")
-sha256sums=('a1eb52447a339454971e3625fb9d8ae2f37a5e35731d3d3aae9b7fe7a9ccf466'
+        "zstd-sys-remove-statik.patch")
+sha256sums=('57862789c103e0607be55371baa6b8666408bb532be33ac2fc71ae61e7e56f66'
             'f7ef2e96d54e33481b5e4838ee3336a9382b8b7a24767ca47fd39069aa466723'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             '2e3d7ef6fdb3ef8a2ec11207e8120ea34553888116ea8a032cb425a8a6261c39'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
-            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b'
-            'b2570bc4795afe6e7b7dbbadc8f2d778c1655b7f804393221e7d513db54c8327'
-            'bf7415426859e7a5f58300c273a0630dfc8e6cc6fcecd7a300cc80543e3568ce'
-            '579181a43e01be3dca2a29add532ff0fa0cc5c8700bb929839ef1041fd4af864')
+            '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
 prepare() {
   cd "${_realname}"
@@ -68,9 +63,7 @@ prepare() {
   rm rust-toolchain.toml
 
   # add support for cli on Windows
-  patch -Np1 -i ../672a472a23ec260f2766b1e6f2075a9f94384935.patch
-  patch -Np1 -i ../0625006a9e7225d995cf392c51de9f938a999b46.patch
-  patch -Np1 -i ../zed-cli-set-path.patch
+  git cherry-pick -n 672a472a23ec260f2766b1e6f2075a9f94384935 0625006a9e7225d995cf392c51de9f938a999b46 a8a05f208bea3f760e702c084c70dad7ee33a5f8
   # use system cargo about to generate license file
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
   # link system deps dynamically
