update godot to 4.4

--- a/mingw-w64-godot/PKGBUILD
+++ b/mingw-w64-godot/PKGBUILD
@@ -5,8 +5,8 @@
 _realname=godot
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
-pkgver=4.3
-pkgrel=3
+pkgver=4.4
+pkgrel=1
 pkgdesc='An advanced, feature packed, multi-platform 2D and 3D game engine (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -36,20 +36,18 @@ depends=("${MINGW_PACKAGE_PREFIX}-brotli"
          "${MINGW_PACKAGE_PREFIX}-wslay"
          "${MINGW_PACKAGE_PREFIX}-mbedtls"
          "${MINGW_PACKAGE_PREFIX}-openxr-sdk"
-         "${MINGW_PACKAGE_PREFIX}-libsquish"
          "${MINGW_PACKAGE_PREFIX}-zlib"
          "${MINGW_PACKAGE_PREFIX}-zstd")
 optdepends=()
 source=("https://github.com/godotengine/godot/releases/download/${pkgver}-stable/${_realname}-${pkgver}-stable.tar.xz"
-        "001-fix-llvm-duplicate-symbol.patch"
+        #"001-fix-llvm-duplicate-symbol.patch"
         "002-enforcing-pkgconfig-for-syslib.patch")
-sha256sums=('751e55bfad8e04b846f9cf7b6eb80e058986a2cb1b103fc0fe6a4d8526a20e56'
-            '47fe087a3bf5cf64bbf168c327c48eb947ec623b4476dbad342b756d566b73c3'
-            '65f9750dc991df3d53edba40ea48ab802c5550cc70b9bfcb9274dfd83e7f2906')
+sha256sums=('74053aa6a19b8751fec89a527c722e32de4d94442ec2525970c108aea89dd3e8'
+            '133971d7ae5c2d0689b19dc09faa3d2ef5aefa4a848f8e1c1efe305051d1f88f')
 
 prepare() {
   cd ${_realname}-${pkgver}-stable
-  patch -p1 -i "../../001-fix-llvm-duplicate-symbol.patch"
+  #patch -p1 -i "../../001-fix-llvm-duplicate-symbol.patch"
   patch -p1 -i "../../002-enforcing-pkgconfig-for-syslib.patch"
 }
 
@@ -85,7 +83,6 @@ build() {
     builtin_wslay=no\
     builtin_mbedtls=no\
     builtin_openxr=no\
-    builtin_squish=no\
     builtin_zlib=no\
     builtin_zstd=no\
     "${extra_config[@]}"
