python-aiohappyeyeballs: update to 2.4.8

--- a/mingw-w64-python-aiohappyeyeballs/PKGBUILD
+++ b/mingw-w64-python-aiohappyeyeballs/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=aiohappyeyeballs
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.4.6
+pkgver=2.4.8
 pkgrel=1
 pkgdesc='Happy Eyeballs for asyncio (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/aio-libs/aiohappyeyeballs"
+url='https://aiohappyeyeballs.readthedocs.io/'
+msys2_repository_url='https://github.com/aio-libs/aiohappyeyeballs/'
 msys2_references=(
   'purl: pkg:pypi/aiohappyeyeballs'
 )
@@ -21,15 +22,10 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-installer"
   "${MINGW_PACKAGE_PREFIX}-python-poetry-core")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('9b05052f9042985d32ecbe4b59a77ae19c006a78f1344d7fdad69d28ded3d0b0')
-
-prepare() {
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+sha256sums=('19728772cb12263077982d2f55453babd8bec6a052a926cd5c0c42796da8bf62')
 
 build() {
-  cd "python-build-${MSYSTEM}"
-
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   python -m build --wheel --skip-dependency-check --no-isolation
 }
 
