--- a/mingw-w64-lldb/PKGBUILD
+++ b/mingw-w64-lldb/PKGBUILD
@@ -7,10 +7,8 @@ fi
 _realname=lldb
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_version=19.1.7
-_rc=""
-_tag=llvmorg-${_version}${_rc}
-pkgver=${_version}${_rc/-/}
+_pkgver=20.1.0
+pkgver=${_pkgver/-/}
 pkgrel=1
 pkgdesc="Next generation, high-performance debugger (mingw-w64)"
 url="https://lldb.llvm.org/"
@@ -33,16 +31,14 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-swig")
              "${MINGW_PACKAGE_PREFIX}-clang-tools-extra")
-_url=https://github.com/llvm/llvm-project/releases/download/${_tag}
-_pkgfn=$_realname-$pkgver.src
+_url=https://github.com/llvm/llvm-project/releases/download/llvmorg-${_pkgver}
+_pkgfn=${_realname}-${_pkgver}.src
 source=($_url/$_pkgfn.tar.xz{,.sig}
-        ${_url}/cmake-${pkgver}.src.tar.xz{,.sig}
-        "104874.patch"::"https://github.com/llvm/llvm-project/pull/104874.patch")
-sha256sums=('376d583c781f83384135ad415d0ccd2b31fe3031711fbc75ed751c65f04c3094'
+        ${_url}/cmake-${_pkgver}.src.tar.xz{,.sig})
+sha256sums=('afddf0b9b79acd7a426fa9acd488a0960e50be86b831a7893097092aa7cb30bd'
             'SKIP'
-            '11c5a28f90053b0c43d0dec3d0ad579347fc277199c005206b963c19aae514e3'
-            'SKIP'
-            '87695f7128fe0fb3f0b698a132f6d18cbe513d35ff1e0ebe25afac395ead8e9f')
+            '9fcd319c6bb87344673f262ef5a6a01262fc9a0a741f3477b7e47e238441268d'
+            'SKIP')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard
               'D574BD5D1D0E98895E3BF90044F2485E45D59042') # Tobias Hieta
@@ -56,9 +52,8 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-  mv cmake-$pkgver.src cmake
+  mv cmake-${_pkgver}.src cmake
   cd "${srcdir}"/$_pkgfn
-  apply_patch_with_msg 104874.patch
 }
 
 build() {
