mingw-w64-crt-git: fix delay load libraries (#23580)
* mingw-w64-crt-git: fix delay load libraries

Details: https://github.com/msys2/MINGW-packages/issues/23577

* pkgrel

---------

Co-authored-by: Christoph Reiter <reiter.christoph@gmail.com>

--- a/mingw-w64-crt-git/PKGBUILD
+++ b/mingw-w64-crt-git/PKGBUILD
@@ -4,7 +4,7 @@ _realname=crt
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 pkgver=12.0.0.r535.g343bce7b0
-pkgrel=1
+pkgrel=2
 _commit='343bce7b0224bbc576ba70fd5dc8e156a5ac45a3'
 pkgdesc='MinGW-w64 CRT for Windows (mingw-w64)'
 arch=('any')
@@ -21,15 +21,23 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!buildflags' '!emptydirs')
-source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('e714eb92bc115f06b4dfcd43cad28cc964a2f92b76179d7fe0cc54d1c511a5b8')
+source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
+        0001-crt-delayimp-Make-an-IAT-entry-writeable-before-modi.patch)
+sha256sums=('e714eb92bc115f06b4dfcd43cad28cc964a2f92b76179d7fe0cc54d1c511a5b8'
+            'fcef8b83090c57ff897f471aeb0cd5a71d6385ff569eba8bbef0c424c21acda4')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
   git describe --long ${_commit} | sed 's/\([^-]*-g\)/r\1/;s/-/./g;s/^v//g'
 }
 
+prepare() {
+  cd "${srcdir}/mingw-w64"
+  patch -p1 -i "${srcdir}/0001-crt-delayimp-Make-an-IAT-entry-writeable-before-modi.patch"
+}
+
 build() {
+  cd "${srcdir}/mingw-w64"
   declare -a _extra_config
   case "$CARCH" in
     i686)
