spirv-headers: backport some patches for spirv-llvm-translator 20.1.0

--- a/mingw-w64-spirv-headers/PKGBUILD
+++ b/mingw-w64-spirv-headers/PKGBUILD
@@ -6,7 +6,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 epoch=2
 pkgver=1.4.304.1
-pkgrel=1
+pkgrel=2
 pkgdesc='Machine-readable files for the SPIR-V Registry (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,8 +17,19 @@ groups=("${MINGW_PACKAGE_PREFIX}-vulkan-devel")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
-source=(https://github.com/KhronosGroup/SPIRV-Headers/archive/vulkan-sdk-${pkgver}/${_realname}-${pkgver}.tar.gz)
-sha256sums=('66e6cec19e7433fc58ace8cdf4040be0d52bb5920e54109967df2dd9598a8d48')
+source=(https://github.com/KhronosGroup/SPIRV-Headers/archive/vulkan-sdk-${pkgver}/${_realname}-${pkgver}.tar.gz
+        https://github.com/KhronosGroup/SPIRV-Headers/commit/9ca0e67b.patch
+        https://github.com/KhronosGroup/SPIRV-Headers/commit/2b2e05e0.patch)
+sha256sums=('66e6cec19e7433fc58ace8cdf4040be0d52bb5920e54109967df2dd9598a8d48'
+            '3135283afc390c431ea7fce5c2d816c32d0b7628b0ef32d891c6b5a9c6ea4c36'
+            'ae265c8e206677e947337769052fe1f3f695e36bdc1754dcb55ba1d59c3b9201')
+
+prepare() {
+  cd SPIRV-Headers-vulkan-sdk-${pkgver}
+  # backports required for spirv-llvm-translator 20
+  patch -p1 -i "${srcdir}"/9ca0e67b.patch
+  patch -p1 -i "${srcdir}"/2b2e05e0.patch
+}
 
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
