zig: update to 0.14.0

--- a/mingw-w64-zig/PKGBUILD
+++ b/mingw-w64-zig/PKGBUILD
@@ -3,8 +3,7 @@
 _realname=zig
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-_pkgver=0.14.0-dev.2487+af89bb05d
-pkgver=${_pkgver/-/}
+pkgver=0.14.0
 pkgrel=1
 pkgdesc='A general-purpose programming language and toolchain for maintaining robust, optimal, and reusable software (mingw-w64)'
 arch=('any')
@@ -16,16 +15,22 @@ msys2_references=(
   'archlinux: zig'
 )
 license=('spdx:MIT')
+depends=("${MINGW_PACKAGE_PREFIX}-clang-libs"
+         "${MINGW_PACKAGE_PREFIX}-llvm-libs"
+         "${MINGW_PACKAGE_PREFIX}-zstd")
 makedepends=("${MINGW_PACKAGE_PREFIX}-clang"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-lld")
-depends=("${MINGW_PACKAGE_PREFIX}-clang-libs"
-         "${MINGW_PACKAGE_PREFIX}-llvm-libs"
-         "${MINGW_PACKAGE_PREFIX}-zlib"
-         "${MINGW_PACKAGE_PREFIX}-zstd")
-source=("https://ziglang.org/builds/${_realname}-${_pkgver}.tar.xz")
-sha256sums=('3f5143efa587a4146a428d9efaf729f0883241be5719c80c2665e502ea151040')
+source=("https://github.com/ziglang/zig/archive/${pkgver}/zig-${pkgver}.tar.gz"
+        "001-support-llvm-20.patch::https://patch-diff.githubusercontent.com/raw/ziglang/zig/pull/22780.patch")
+sha256sums=('b45589b782a9406a414a3cac201ca0243650f9bedcb453730c124bf6f07ab33f'
+            '18d9ba8dc5dfb2e6c851334b94f1fba1041d96df14fd17ec0ea5979e31d6b3a8')
+
+prepare() {
+  cd ${_realname}-${pkgver}
+  patch -p1 -i "${srcdir}"/001-support-llvm-20.patch
+}
 
 build() {
   declare -a _extra_config
@@ -50,7 +55,7 @@ build() {
     -DZIG_TARGET_MCPU=baseline \
     -DZIG_USE_LLVM_CONFIG=ON \
     "${_extra_config[@]}" \
-    -S ${_realname}-${_pkgver} \
+    -S ${_realname}-${pkgver} \
     -B build-${MSYSTEM}
 
   cmake --build build-${MSYSTEM}
@@ -59,6 +64,6 @@ build() {
 package() {
   DESTDIR="${pkgdir}" cmake --install build-${MSYSTEM}
 
-  install -Dm644 "${srcdir}"/${_realname}-${_pkgver}/LICENSE \
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE \
     "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
